@@ -1,27 +1,4 @@
 /*
- * A small example of a shell implementation created by Robert Johnson, yes, I had time,
- * but not enough. At least you've got a very minimal shell implementation. I would call 
- * this one, the msh (Minibox SHell) since it, thanks to the readline library, can make
- * use of its history mechanism, not just that, can't forget about history scrolling, 
- * best part of all, it now fully recognizes variable expansion, what a fantastic feat.
- *
- * Even bash itself uses libreadline, which isn't old. Its one of the reasons I chose
- * to use libreadline instead of making my own like in dash since it'll be easier for
- * me to do.
- * 
- * NOTE: I would like libreadline to statically link against msh because it would
- * eliminate the need for libreadline on the system and also make it run faster. So, I 
- * would like to include the readline sources with minibox just like in bash, so that 
- * I would be able to strip and delete some of the readline sources down depending on 
- * what msh needs. Or as usual, statically link msh to libreadline This is what I did 
- * in my first try before thinking  about including the readline sources but its just
- * slow. Just to add in a little bit, readline's info manual lists as a bug "It's too 
- * big and too slow." That's the first reason that  first came to mind which made me 
- * think, yes, I should statically link it to my shell and on the top of that, maybe 
- * even strip its source down and help readline's developers a little bit :). The size
- * comes to 284K which is a massive size increase which is another reason I would want
- * to strip it down. The last resort is to create our own readline like in dash which
- * would be a lot times faster than libreadline.
  *
  * gcc -o example2 example2.c -l:libreadline.a -ltinfo -lc -Wl,-Bdynamic
  *
